--- a/21 oktober középszint/web/tdh.css
+++ b/21 oktober középszint/web/tdh.css
@@ -24,7 +24,7 @@ li p{
     padding: 0px;
     margin: 15px 5px 0px;
     border: 3px solid navy;
-	radius:15px;
+	border-radius: 15px;
 }
 
 .kepfelirat{
